<resources>
    <string name="app_name">SpaceX</string>
    <string name="filter">filter</string>

    <string name="all">all</string>
    <string name="filter_by_year">by year</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>

    <string name="company">COMPANY</string>
    <string name="launches">LAUNCHES</string>
    <string name="company_description">%s was founded by %s in %d. It has now %d employees, %d launch sites, and is valued at USD %d</string>
    <string name="company_test">1%s was founded</string>

    <!--    placeholders-->
    <string name="mission">Mission:</string>
    <string name="date_time">Date Time:</string>
    <string name="rocket">Rocket:</string>
    <string name="day_from_now">Days %s now:</string>
    <string name="from">from</string>
    <string name="since">since</string>

    <!--    dialog-->
    <string name="dialog_link_chooser">Choose link to open</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="video_page">Video page</string>
    <string name="open">open</string>
</resources>