<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.javatpoint.com.kotlinoptionmenu.MainActivity">

    <item
        android:id="@+id/action_all"
        android:orderInCategory="100"
        android:title="@string/all"
        android:icon="@drawable/ic_all"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter_by_year"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_asc"
                android:title="@string/asc"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_asc"/>

            <item
                android:id="@+id/action_desc"
                android:title="@string/desc"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_desc"/>

        </menu>

    </item>

</menu>