<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

<!--    patch image view-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/patch_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@id/patch_image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/status_image_view">

        <!--    data left container-->
        <LinearLayout
            android:id="@+id/placeholder_container"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                style="@style/PlaceholderTextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                style="@style/PlaceholderTextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rocket"
                style="@style/PlaceholderTextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_placeholder_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_from_now"
                style="@style/PlaceholderTextView"/>

        </LinearLayout>

        <!--    data right container-->
        <LinearLayout
            android:id="@+id/data_container"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mission_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/RegularTextView"
                android:text="yo baby"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="yo baby"
                style="@style/RegularTextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rocket_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="yo baby"
                style="@style/RegularTextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/days_different_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="yo baby"
                style="@style/RegularTextView"/>

        </LinearLayout>

    </LinearLayout>

<!--    status image-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/status_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:ellipsize="end"-->
<!--        android:maxLines="3"-->
<!--        android:text="mkdafmkl/msaf;dklmf"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/ivArticleImage"-->
<!--        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>